Consolidate PerformanceTest exclusion into single profile activated by skipPerformanceTests property